Support multipl-dimension array declaration. Resolve most ide warnings